[package]
name = "rust-jit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
page_size = "0.4.2"
object = "0.28"
xmas-elf = "0.8"
elfloader = { path = "../rust-elfloader/"}
byteorder = "1.4.3"
